# right-now-it-is-test-project

./: CMakeLists.txt  FfmpegHandler.cpp  FfmpegHandler.h  ImageDialog.qml  ImageItem.cpp  ImageItem.h  ImageItemData.h  ImageModel.cpp  ImageModel.h  ImageReader.cpp  ImageReader.h  Main.qml  MainManager.cpp  MainManager.h  MainView.qml  MainViewItem.qml  README.md  VideoCreator.cpp  VideoCreator.h  main.cpp  resources.qrc
